# cpp-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix
app/: CMakeLists.txt
app/src/: main.cpp
app/test/: CMakeLists.txt  test.cpp  test.cxx
cmake/: Boost.cmake  ClangdHelpers.cmake  RunApp.cmake  Sqlite.cmake  TargetEnv.cmake
